# traffic-lane-counter

./: .dockerignore  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  alembic.ini  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
.github/workflows/: ci.yml
backend/: detection_core.py  main.py  pipeline.py  serializer.py  storage_adapters.py  worker.py
backend/api/: routes_admin.py  routes_audit.py  routes_auth.py  routes_cameras.py  routes_counts.py  routes_detect.py  routes_health.py  routes_jobs.py  routes_models.py
backend/benchmark/: manifest.py
backend/config/: __init__.py
backend/counting/: line_counter.py
backend/db/: repositories.py
backend/detection/: yolo_detector.py
backend/lanes/: lane_assigner.py
backend/occupancy/: lane_state_manager.py  occupancy_engine.py
backend/storage/: repo_protocol.py
configs/: app.yaml  detrac_benchmark_manifest.yaml  models.yaml  mvi_20011_config.yaml  mvi_40181_config.yaml  mvi_40712_config.yaml  mvi_40761_config.yaml  mvi_40864_config.yaml  settings.json
configs/cameras/: YT_LIVE_TEST.yaml  YT_LIVE_TEST_02.yaml  YT_LIVE_TEST_03.yaml
configs/detection_zones/: YT_LIVE_TEST_02_zones.yaml  YT_LIVE_TEST_03_zones.yaml  YT_LIVE_TEST_zones.yaml
configs/lanes/: CAM_01_lanes.yaml  YT_LIVE_TEST_02_lanes.yaml  YT_LIVE_TEST_03_lanes.yaml  YT_LIVE_TEST_lanes.yaml
deploy/: .env.example  Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker  README.md  docker-compose.yml  nginx.conf
deploy/api/: Dockerfile
deploy/database/: README.md
deploy/frontend/: 30-write-config.sh  Dockerfile
deploy/nginx/: nginx.conf
deploy/proxy/: nginx.conf
deploy/stack/: docker-compose.yml
deploy/worker/: Dockerfile
detection_server/api/: routes_detect.py
detection_server/schemas/: detect.py
detection_server/services/: manager.py  stream.py
docs/: PROJECT_IMPROVEMENT_AUDIT_2026-07-10.md  REALTIME_OPTIMIZATION_AUDIT_2026-07-09.md  REPO_LAYOUT.md  api-inventory.generated.json  architecture.generated.md  product-context.generated.md  risk-register.generated.md
frontend/: __init__.py  app.py  index.html  style.css
frontend/js/: app.js  core.js
frontend/pages/: alerts.html  analytics.html  cameras.html  counting.html  dashboard.html  events.html  jobs.html  lanes.html  live.html  models.html  reports.html  settings.html  users.html
legacy/: README.md
legacy/backend/: __init__.py  log_setup.py  main.py  pubsub.py
legacy/code/: analyze_all_sequences.py  analyze_sequence_bboxes.py
legacy/detection_server/: main.py
legacy/docs/: BUG_AUDIT_2026-07-09.md
legacy/frontend_streamlit/: app.py
legacy/shared/: detection_core.py  roi.py  yt_utils.py
legacy/tools/: codemod_imports.py  refactor_frontend.py
scripts/: benchmark_model.py  import_jsonl.py  refactor_frontend.py  run_benchmark.py  run_occupancy.py  seed_db.py  serve_frontend.py
services/backend/: Dockerfile  README.md
services/database/: README.md  alembic.ini
services/frontend/: Dockerfile  README.md  config.js  index.html  nginx.conf.template
services/model/: Dockerfile  README.md
shared/config/: compiler.py  validators.py
shared/counting/: counting_line.py  line_counter.py
shared/lanes/: lane_assigner.py
shared/schemas/: detect.py
test-reports/release_evidence/: release-readiness.generated.json  release-readiness.generated.md
tests/: conftest.py
tests/integration/: test_api_contracts.py
tests/unit/: test_app_routes.py  test_dashboard_summary.py  test_defaults_consistency.py  test_live_diagnostics.py  test_live_routing.py  test_query_repository.py  test_viz_colors.py  (+3 more)
tf_api/: main.py  pyproject.toml  storage_adapters.py
tf_api/api/: __init__.py  routes_admin.py  routes_alerts.py  routes_audit.py  routes_auth.py  routes_cameras.py  routes_counts.py  routes_dashboard.py  routes_detect.py  routes_health.py  routes_jobs.py  routes_lanes.py  routes_live.py  routes_models.py  routes_reports.py  routes_settings.py  routes_users.py  routes_ws.py  routes_zones.py
tf_api/config/: __init__.py
tf_api/monitoring/: system_metrics.py
tf_api/services/: health_checker.py  settings_service.py
tf_common/: live_bus.py  live_errors.py  pubsub.py  safe_path.py  viz_colors.py  yt_utils.py
tf_core/: detection_core.py  pyproject.toml  roi.py
tf_core/config/: compiler.py  validators.py
tf_core/counting/: line_counter.py
tf_core/detection/: yolo_detector.py
tf_core/io/: config_loader.py
tf_core/lanes/: __init__.py  lane_assigner.py
tf_core/occupancy/: occupancy_engine.py
tf_core/schemas/: detect.py
tf_core/tracking/: __init__.py  bytetrack_adapter.py
tf_db/: init_db.py  models.py  repositories.py
tf_worker/: pipeline.py  pyproject.toml  worker.py
tf_worker/benchmark/: __init__.py  report_writer.py  runner.py
tf_worker/detection/: motion_detector.py
tf_worker/evaluation/: bbox_matching.py  detrac_xml_parser.py  metrics.py
tf_worker/io/: video_io.py
tf_worker/storage/: local_crop_storage.py  retention.py  storage_worker.py
tf_worker/visualization/: visualizer.py
tools/: benchmark_model.py
trafficflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+75 files in other folders)
