[project]
name = "tf-core"
version = "1.0.0"
description = "TrafficFlow AI detection core: YOLO + ByteTrack + lane counting + occupancy"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "PyYAML",
    "pydantic",
    "ultralytics",
]

[tool.setuptools.packages.find]
include = ["tf_core*"]
